bk_ida/gccida/c0/gen_decl_die
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_decl_die/src/dwarf2out.c:11876:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_decl_die/src/dwarf2out.c:11877:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // [rsp+8h] [rbp-28h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_decl_die/src/dwarf2out.c:11878:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *origin; // [rsp+18h] [rbp-18h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_decl_die/src/dwarf2out.c:11879:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *origina; // [rsp+18h] [rbp-18h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_decl_die/src/dwarf2out.c:11907:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_decl_die/src/dwarf2out.c:11931:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_decl_die/src/dwarf2out.c:11935:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_decl_die/src/dwarf2out.c:11957:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_decl_die/src/obj/dwarf2out.o] Error 1
